mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/nameAndTypeResolution/erc7201_builtin_invalid_member_value.sol
contract C {
    function f() public {
        erc7201.value();
    }
}
// ----
// TypeError 8820: (47-60): Member "value" is only available for payable functions.
